--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -174,7 +174,7 @@
                     <p><i class="fa-solid fa-envelope"></i> tapash.sd.official@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +91 7001849383</p>
                     <div class="social-icon">
-                        <a href="https://twitter.com/im_Tapash/" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fa-brands fa-github"></i></i></a>
                     </div>
