--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -174,10 +174,10 @@
                     <p><i class="fa-solid fa-envelope"></i> tapash.sd.official@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +91 7001849383</p>
                     <div class="social-icon">
-                        <a href="https://twitter.com/im_Tapash"><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href="https://in.linkedin.com/in/tapashsutradhar/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/im_Tapash"><i class="fab fa-twitter-square"></i></a>
+                        <a href="https://in.linkedin.com/in/tapashsutradhar/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-facebook"></i></a>
                     </div>
                     <!------------------CV File----------------------->
                     <a href="assets/Tapash Sutradhar Resume.pdf" download class="btn btn2">Download CV</a>
