--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="assets/x-icon" href="assets/favicon.jpg"/>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/4b8f79b380.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 </head>
 
 <body>
