--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,6 +178,9 @@
                         <a href="https://in.linkedin.com/in/tapashsutradhar/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar"><i class="fab fa-github"></i></a>
                         <a href="https://github.com/tapashsutradhar"><i class="fab fa-facebook"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://github.com/tapashsutradhar"><i class="fa-brands fa-medium"></i></a>
+
                     </div>
                     <!------------------CV File----------------------->
                     <a href="assets/Tapash Sutradhar Resume.pdf" download class="btn btn2">Download CV</a>
