--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -201,7 +201,7 @@
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p>Copyright © 2023 Tapash Sutradhar. All rights reserved </p>
+            <p>Copyright © 2024 TSD ⌘. All rights reserved </p>
         </div>
     </div>
     <!------------------JS Script----------------------->
