Update skills and services
Update

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,11 +68,10 @@
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>Software Development</span><br>Java,Pytnon (Basic), C++, PHP </li>
+                            <li><span>Software Development</span><br>Java Full Stack, MERN Stack, Pytnon (Basic), PHP </li>
                             <li><span>Web Development</span><br>Web page Design using - HTML, CSS, JavaScript, Bootstrap, React</li>
-                            <li><span>UI/UX Design</span><br>Designing Web/App Interface, High Lavel Design, Wireframing</li>
-                            <li><span>App Development</span><br>Android</li>
-                            <li><span>Database Management</span><br>Oracle SQL, MySQL, MongoDB</li>
+                            <li><span>UI/UX Design</span><br>Designing Web/App Interface, High Lavel Design, Wireframing, Product  Design</li>
+                            <li><span>Database Management</span><br>Excel, Oracle SQL, MySQL, MongoDB, PowerBI, Tableau</li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="experience">
@@ -105,15 +104,14 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit inventore, quibusdam eveniet
-                        quos.</p>
+                    <h2>Web Development</h2>
+                    <p>Responsive Web pages and Web Applications</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
-                    <h2>Software Development</h2>
-                    <p>Help create all types of web-based software and ensure great experience for web users.</p>
+                    <h2>Software Development & Testing</h2>
+                    <p>Development and Testing</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
@@ -125,7 +123,7 @@
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
-                    <p>Android App</p>
+                    <p>Android and IOS</p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
