--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,6 +159,14 @@
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
+                <div class="work">
+                    <img src="assets/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>Full Stack Hospital Management System</h3>
+                        <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
             </div>
             <a href="#" class="btn">See more</a>
         </div>
