--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -183,9 +183,10 @@
                         <a href="https://twitter.com/im_Tapash"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://in.linkedin.com/in/tapashsutradhar/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar"><i class="fab fa-github"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-facebook"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-square-instagram"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-medium"></i></a>
+                        <a href="https://www.facebook.com/itapashsutradhar"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/itapashsutradhar/"><i class="fab fa-square-instagram"></i></a>
+                        <a href="https://medium.com/@itapashsutradhar"><i class="fab fa-medium"></i></a>
+                        <a href="https://dribbble.com/tapashsutradhar"><i class="fab fa-square-dribbble"></i></a>
 
                     </div>
                     <!------------------CV File----------------------->
