--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -180,13 +180,13 @@
                     <p><i class="fa-solid fa-envelope"></i> tapash.sd.official@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +91 7001849383</p>
                     <div class="social-icon">
-                        <a href="https://twitter.com/im_Tapash"><i class="fab fa-twitter-square"></i></a>
-                        <a href="https://in.linkedin.com/in/tapashsutradhar/"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/tapashsutradhar"><i class="fab fa-github"></i></a>
-                        <a href="https://www.facebook.com/itapashsutradhar"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/itapashsutradhar/"><i class="fab fa-square-instagram"></i></a>
-                        <a href="https://medium.com/@itapashsutradhar"><i class="fab fa-medium"></i></a>
-                        <a href="https://dribbble.com/tapashsutradhar"><i class="fab fa-square-dribbble"></i></a>
+                        <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                        <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/itapashsutradhar" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/itapashsutradhar/" target="_blank"><i class="fab fa-square-instagram"></i></a>
+                        <a href="https://medium.com/@itapashsutradhar" target="_blank"><i class="fab fa-medium"></i></a>
+                        <a href="https://dribbble.com/tapashsutradhar" target="_blank"><i class="fab fa-square-dribbble"></i></a>
 
                     </div>
                     <!------------------CV File----------------------->
