--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,26 +104,26 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Development</h2>
-                    <p>Responsive Web pages and Web Applications</p>
+                    <h2>Electrical design</h2>
+                    <p>Engineering Projects Design using AutoCAD</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
-                    <h2>Software Development & Testing</h2>
-                    <p>Development and Testing</p>
+                    <h2>Project Management</h2>
+                    <p>Leadership</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Graphics design</h2>
-                    <p>UI/UX of Web and Mobile App Interface, Wireframing, Visiting Cards, Flayer, MockUp...</p>
+                    <h2>PLC/SCADA, MATLAB etc.</h2>
+                    <p>Automation Tools</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>Android and IOS</p>
+                    <h2>Power Generation, Transmission, Distribution</h2>
+                    <p>Switchgear & Protection, Panel Design, Communication System, Operation, GIS/AIS system, HVAC System</p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
