transfer IT to EE
Contant for EE

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p class="heading-1">Software Developer & Web Developer</p>
+                <p class="heading-1">Electrical Engineering</p>
                 <h1 class="heading-2">Hey There! <span class="wave">👋🏼</span><br /> I'm <span>Tapash</span> <br>Sutradhar from India</h1>
             </div>
         </div>
@@ -51,14 +51,18 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Hey there! Glad to see you here. Recently graduate seeking an entry-level position in a dynamic organization where
-                        I can apply my technical knowledge, problem-solving skills, and passion for innovation.
-                        Eager to contribute to projects that drive efficiency, sustainability, and technological
-                        advancement. I am enthusiastic about learning and adapting to new challenges, and I am
-                        confident in my ability to contribute effectively to your team. I would like to implement
-                        my innovative ideas, skills and creativity for accomplishing the project. <br> I love to explore different domains of computer science & have a keen interest in Software Development, 
-                        Web Technologies and UI/UX Design. I like to learn new technologies and ready for new challenges! I'm a part of Tech Labs, an open source community of students at BITM Santinikatan.<br>
-                        I love Photography, Explore new places, sketching and listening to music in my time :)<br><br>
+                    <p>Hey there! Glad to see you here.<br>
+
+                        Engineering graduate with Experienced engineering professional 
+                        with a strong foundation in design, Maintenance and project management. Demonstrated success in accurate load and cost 
+                        calculations, ensuring projects adhere to established parameters. Meticulous attention to detail and extensive knowledge in 
+                        the Electrical Field, including maintenance and project management. Proficient in utilizing computer software and IT tools 
+                        to enhance productivity and streamline operations. Eager to contribute to projects that drive efficiency, sustainability, and technological advancement.
+                        I am enthusiastic about learning and adapting to new challenges, and I am confident in my ability to contribute effectively 
+                        to your team. I would like to implement my innovative ideas,technical knowledge, problem-solving skills and creativity for accomplishing the project. <br> 
+                        I love to explore different domains & have a keen interest in Software tools, Web Technologies and UI/UX Design. I like to
+                        learn new technologies and ready for new challenge.<br>
+                        My Hobbie I love Photography, Explore new places and listening to music in my time :)<br><br>
                     </p>
                     <!------------------3 title section----------------------->
                     <div class="tab-titles">
@@ -68,28 +72,83 @@
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>Software Development</span><br>Java Full Stack, MERN Stack, Pytnon (Basic), PHP </li>
-                            <li><span>Web Development</span><br>Web page Design using - HTML, CSS, JavaScript, Bootstrap, React</li>
-                            <li><span>UI/UX Design</span><br>Designing Web/App Interface, High Lavel Design, Wireframing, Product  Design</li>
+                            <li><span>Technical knowledge</span><br>
+                                • Electrical Machine 
+                                • Simulation Software (LTspice, PSPICE)   
+                                • Electrical Circuit Design 
+                                • Electrical Auditing 
+                                • Analog and Digital Electronics 
+                                • Computer Network & Security 
+                                • Power Systems Analysis 
+                                • Embedded Systems and IOT  
+                                • Microprocessor and Microcontroller 
+                                • Prototyping & Testing 
+                                • Microcontroller Embedded Programming:  
+                                (Arduino, PIC, STM32)  
+                                • CAD Software for Schematic Design:  
+                                (AutoCAD, Altium, Eagle, OrCAD) 
+                                • Business and Product Understanding 
+                            </li>
+                            <li><span>Computer Knowledge</span>
+                                <br>Programming Language : Java Full Stack, MERN Stack, C/C++, HTML/CSS, JS, PHP, JSON
+                                <br>Operating Systems: Windows, Linux, Mac OS
+                                <br>Data Analysis: Microsoft Power BI, Tableau, Oracle SQL, MySQL
+                                <br>Office Tools: Microsoft Office 365, SharePoint, MS Office, MS Excel, MS PowerPoint, SQL Database, Web Technologies 
+                            </li>
+                            <li><span>Web Technologies</span><br>Web page Design using - HTML5, CSS3, JavaScript (ES6+), Bootstrap, React</li>
                             <li><span>Database Management</span><br>Excel, Oracle SQL, MySQL, MongoDB, PowerBI, Tableau</li>
+                            <li><span>Soft Skills</span><br>Agile Methodology, Project Management, Testing Procedures, Simulation Tools, Teamwork, Quality Assurance & Quality 
+                                Control, Production Support, Attention to Detail, Communication, Analytical & critical Thinking, Problem-solving, Team 
+                                Work, Adoptability, Software and Tools</li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="experience">
                         <ul>
-                            <li><span>Software Development and Testing Internship</span><br>Java Full Stack, J2EE, PHP,
-                                Python, C/C++</li>
-                            <li><span>UI/UX and Graphics Design</span><br>Designing Web/App Interface, Wireframing,
-                                Visiting Cards, Flayer, MockUp...</li>
-                            <li><span>App Development</span><br>Building Android apps ~ Self Learning</li>
-                            <li><span>Web Development</span><br>Building Web Page using HTML, CSS, JavaScript, Bootstrap
+                            <li><span>Graduate Engineer Trainee (Electriical)</span>
+                                <br>Operation and Maintenance<br> 
+                                West Bengal State Electricity Transmission Company Ltd  | West Bengal<br>
+                                July 2024 – Present <br>
+                                Key Responsibilities & Achievements: <br>
+                                  •  Supported the operation and maintenance of 440/ 220/ 132/ 33/ 11kV substations, ensuring the reliability of 
+                                power distribution. <br>
+                                  •  Supported troubleshooting and adhered to safety protocols. <br>
+                                  •  Contributed to a 5% efficiency increase. <br>
+                                  •  Helped maintain 100% safety compliance. 
                             </li>
-                            <li><span>Database Management</span><br>Oracle SQL, MySQL, PostgreSQL, MongoDB</li>
+                            <li><span>Executive Engineer</span>
+                                  <br>Utility and Maintenance, Design & Project<br>
+                                  Synnat Pharma Pvt. Ltd  | Visakhpattanam, India <br>
+                                  May 2023 – July 2024 <br>
+                                  Key Responsibilities & Achievements: <br>
+                                  •  Led a cross-functional Maintenance & Utility team in project design and implementation. <br>
+                                  •  Managed project timelines, ensuring on-time and within-budget delivery. <br>
+                                  •  Improved system efficiency through preventive maintenance and RCA, FMEA, CAPA tools. <br>
+                                  •  Developed SOPs and managed utility systems for optimal performance. <br>
+                                  •  Increased system performance by 20%. <br>
+                                  •  Reduced maintenance costs by 15%. <br>
+                                  •  Led a major utility upgrade, completed 2 months early and 10% under budget. <br>
+                                  •  Improved team productivity by 30% and reduced safety incidents by 25%. <br>
+                                </li>
+                            <li><span>Junior Engineer | Industrial Training </span><br>
+                                Durgapur Projects Limited (DPL) <br>                                 
+                                Operation and Maintenances of a 550MW power plant unit | 3 Month<br>
+                                •  Power Plant Operation (Boiler, PLC/SCADA Control) 
+                            </li>
+                            <li><span>Software Development and Testing Internship</span><br>Q & J Spider Kolkata
+                            </li>
+                            <li><span></span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="education">
                         <ul>
-                            <li><span>B-Tech ~ 2023</span><br>Bengal Institute of Technology and Management <br> CGPA 9.17 <br></li>
-                            <li><span>Diploma ~ 2019</span><br>Nibedita Poplytechnic <br> CGPA 8.5 <br></li>
+                            <li><span>B-Tech ~ 2023</span><br>
+                                Bengal Institute of Technology and Management (BITM), Santinikatan, WB, India<br>
+                                Electrical Engineering<br>
+                                CGPA 9.17 <br></li>
+                            <li><span>Diploma ~ 2019</span><br>
+                                Nibedita Poplytechnic (WBSCTE & AICTE), Barhampur, WB, India<br>
+                                Electrical Engineering<br> 
+                                CGPA 8.5 <br></li>
                             <li><span>School</span><br>MC. William Higher Secondary School, Alipurduar</li>
                         </ul>
                     </div>
