--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="assets/work-1.png.png" alt="">
+                    <img src="assets/work-1.png" alt="">
                     <div class="layer">
                         <h3>Job Listing Portal</h3>
                         <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="assets/work-2.png.png" alt="">
+                    <img src="assets/work-2.png" alt="">
                     <div class="layer">
                         <h3>Cirtificate Verification System</h3>
                         <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
