--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -318,7 +318,7 @@
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p>Copyright © 2024 TSD ⌘. All rights reserved </p>
+            <p> © TSD Portfollio 2024. All rights reserved. ⌘</p>
         </div>
     </div>
     <!------------------JS Script----------------------->
