--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,6 +82,7 @@
                         <ul>
                             <li><span>📌 Technical knowledge</span><br>
                                 • Programming
+                                • Electrical Desugn (Autocad, ETap, Altium)
                                 • Data Structute and Algorithm
                                 • Operating System
                                 • Computer Systems and Architecture
@@ -134,6 +135,7 @@
                                   •  Graphics Design <br>
                                   •  Copy Writing <br>
                                   •  Web development <br>
+                                  •  Data Analysis and Visualization <br>
                             </li>
                             <li><span>Graduate Apprentice Trainee</span><br>WBSETCL
                                 <br>
