--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -363,7 +363,7 @@ with Java using Postman API. In a team of 4, top 10 finalist
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-envelope"></i> tapash.sd.official@gmail.com</p>
-                    <p><i class="fa-solid fa-square-phone"></i> +91 7001849383</p>
+                    <p><i class="fa-solid fa-square-phone"></i> Please fill a contact form </p>
                     <div class="social-icon">
                         <a href="https://twitter.com/im_Tapash" target="_blank"><i class="fab fa-twitter-square"></i></a>
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
