--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -160,11 +160,11 @@
                         <ul>
                             <li><span>B-Tech ~ 2023</span><br>
                                 Bengal Institute of Technology and Management (BITM), Santinikatan, WB, India<br>
-                                Electrical Engineering<br>
+                                Bachelor of Technology<br>
                                 CGPA 9.17 <br></li>
                             <li><span>Diploma ~ 2019</span><br>
                                 Nibedita Poplytechnic (WBSCTE & AICTE), Barhampur, WB, India<br>
-                                Electrical Engineering<br> 
+                                Diploma in Engineering<br> 
                                 CGPA 8.5 <br></li>
                             <li><span>School</span><br>MC. William Higher Secondary School, Alipurduar</li>
                         </ul>
