--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -346,7 +346,7 @@ with Java using Postman API. In a team of 4, top 10 finalist
                         <a href="https://dribbble.com/tapashsutradhar" target="_blank"><i class="fab fa-square-dribbble"></i></a>
                     </div>
                     <!------------------CV File----------------------->
-                    <a href="assets/Tapash Sutradhar Resume.pdf" download class="btn btn2">Download CV</a>
+                    <a href="assets/Tapash Sutradhar.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
