--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -366,7 +366,7 @@ with Java using Postman API. In a team of 4, top 10 finalist
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p> © TSD Portfollio 2025. All rights reserved.</p>
+            <p> © 2025 All rights reserved</p>
         </div>
     </div>
     <!------------------JS Script----------------------->
