--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -332,8 +332,8 @@ with Java using Postman API. In a team of 4, top 10 finalist
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> Please fill a contact form -> </p>
-                    <p><i class="fa-solid fa-square-phone"></i> Please fill a contact form -> </p>
+                    <p><i class="fa-solid fa-envelope"></i> Please fill contact form </p>
+                    <p><i class="fa-solid fa-square-phone"></i> contact form is working </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
