--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -177,23 +177,22 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Graphics design</h2>
-                    <p>Logo Design and Branding,
-                        Marketing Materials,
-                        Web and App Design - layouts and user interfaces (UI/UX) for websites and mobile apps.,
-                        Social Media Design,
-                        Packaging Design,
-                        Illustrations,
-                        Motion Graphics,
-                        Print Design
+                    <h2>Freelancing</h2>
+                    <p>Graphics design - Logo Design, Brand Identity design, Marketing Materials, Web and App Design layouts and user interfaces (UI/UX), Social Media Design,Packaging Design, Illustrations, Print Design <br>
+                        Copy Writing - Creative Writing, Email Marketing, Social Media Copy, SEO Copywriting, Script Writing
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-uncharted"></i>
-                    <h2>Copy Writing</h2>
-                    <p>Creative Writing :
-                        Website Copy, Email Marketing, Social Media Copy, SEO Copywriting, Script Writing
+                    <h2>Virtual Assustant (VA)</h2>
+                    <p>Provide administrative, technical or creative support to business, entrepreneurs or professionals.<br>
+                        Administrative support - Managing emails, scheduling appointments, handling consumer inquiries. <br>
+                        Social media management - Creating posts, responding to messages and growing online presence. <br>
+                        Data entry and research - Collecting and organizing information for businesses. <br>
+                        Ecommerce support - Managing online stores, processing orders, or handling customer service. <br>
+                        Content writing - writing blog posts, product descriptions, or newsletters. <br>
+                        Bookkeeping - Tracking expenses, invoicing clients, and handling financial records.
                     </p>
                     <a href="#">Learn more</a>
                 </div>
@@ -206,8 +205,8 @@
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>Data Analist</h2>
-                    <p>Data Cleaning and Preparation,
-                        Data Visualization,
+                    <p>Data Cleaning and preprocessing,
+                        Data Visualization <br>
                         Data Modeling and Forecasting,
                         Statistical Analysis,
                         Business Intelligence (BI),
