--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -206,8 +206,9 @@
                     <i class="fa-brands fa-app-store"></i>
                     <h2>Data Analist</h2>
                     <p>Data Cleaning and preprocessing,
-                        Data Visualization <br>
-                        Data Modeling and Forecasting,
+                        Data Visualization, Exploratory data analysis, machine learning models, 
+                        web scrapping and data extraction, database management, financial and business analysis,
+                        Data Modeling and Forecasting
                         Statistical Analysis,
                         Business Intelligence (BI),
                         Market Research and Insights,
@@ -322,7 +323,7 @@
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p> © 2025 All rights reserved</p>
+            <p> All rights reserved © 2025</p>
         </div>
     </div>
     <!------------------JS Script----------------------->
