--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
             </nav>
             <div class="header-text">
                 <p class="heading-1"> ... </p>
-                <h1 class="heading-2">Hey There! <span class="wave">👋🏼</span><br /> I'm <span>Tapash</span> <br>Sutradhar from India</h1>
+                <h1 class="heading-2">Hey There! <span class="wave">👋🏼</span><br /> I'm <span>Tapash</span> <br>Sutradhar</h1>
             </div>
         </div>
     </div>
