--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -322,7 +322,7 @@
         </div>
         <!------------------Copyright----------------------->
         <div class="copyright">
-            <p> 2025 © All rights reserved</p>
+            <p> © Copyright Made by Tapash Sutradhar 2025 · All rights reserved</p>
         </div>
     </div>
     <!------------------JS Script----------------------->
