--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -165,8 +165,8 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Freelancing</h2>
-                    <p>
+                    <h2>Engineering design</h2>
+                    <p>Freelancing
                         <!----------------
                         Graphics design - Logo Design, Brand Identity design, Marketing Materials, Web and App Design layouts and user interfaces (UI/UX), Social Media Design,Packaging Design, Illustrations, Print Design <br>
                         Copy Writing - Creative Writing, Email Marketing, Social Media Copy, SEO Copywriting, Script Writing
@@ -193,18 +193,22 @@
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
                     <h2>Web Development</h2>
-                    <p>Full-Stack Development, Website Maintenance, Custom Web Applications, Dashboard Design</p>
+                    <p>
+                        <!----------------
+                        Full-Stack Development, Website Maintenance, Custom Web Applications, Dashboard Design
+                    ---------------->
+                    </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>Data Analist</h2>
-                    <p>
+                    <p> Data Analysis and Visualization, Dashboard Creation
                         <!----------------
                         Data Cleaning and preprocessing,
                         Data Visualization, Exploratory data analysis, machine learning models, 
                         web scrapping and data extraction, database management, financial and business analysis,
-                        Data Modeling and Forecasting
+                        Data Modeling and Forecasting, , Database management, Data Modeling and Forecasting, Statistical Analysis
                         Statistical Analysis,
                         Business Intelligence (BI),
                         Market Research and Insights,
