--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -290,8 +290,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> Please fill contact form </p>
-                    <p><i class="fa-solid fa-square-phone"></i> contact form is working </p>
+                    <p><i class="fa-solid fa-envelope"></i> sutradhartapashapd@gmail.com </p>
+                    <p><i class="fa-solid fa-square-phone"></i> +91  </p>
                     <div class="social-icon">
                         <a href="https://in.linkedin.com/in/tapashsutradhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/tapashsutradhar" target="_blank"><i class="fab fa-github"></i></a>
