--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -234,16 +234,16 @@
                 <div class="work">
                     <img src="assets/work-1.png" alt="">
                     <div class="layer">
-                        <h3>QR Scanner App</h3>
-                        <p>The app connects you to the talented people around the world.</p>
+                        <h3>Smart Energy Management System with IoT, AI, and Renewable Integration</h3>
+                        <p>Project 1</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="assets/work-2.png" alt="">
                     <div class="layer">
-                        <h3>Hospital Management Software</h3>
-                        <p>The Software connects People to Hospital and Doctor around the world.</p>
+                        <h3>IoT-Based Smart Home Automation and Monitoring System</h3>
+                        <p>Project 2</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -251,8 +251,7 @@
                     <img src="assets/work-3.png" alt="">
                     <div class="layer">
                         <h3>Employee Management System</h3>
-                        <p>The Software connects to Employes with there Company and Employes can See all details.
-                            Download it from play store.</p>
+                        <p>The Software connects to Employes with there Company and Employes can See all details.</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -260,23 +259,23 @@
                     <img src="assets/work-1.png" alt="">
                     <div class="layer">
                         <h3>Job Listing Portal</h3>
-                        <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
+                        <p>Project.</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="assets/work-2.png" alt="">
                     <div class="layer">
-                        <h3>Cirtificate Verification System</h3>
-                        <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
+                        <h3>Result Management and Certificate Verification Application</h3>
+                        <p>Automated result processing and certificate verification</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="assets/work-3.png" alt="">
                     <div class="layer">
-                        <h3>Result Management Syatem</h3>
-                        <p>MERN Stack Project with using React, Node, MongoDB, Express</p>
+                        <h3>Real-Time Stock Market Analysis</h3>
+                        <p>Built a real-time stock tracking and analysis system with a team.</p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
