Landing page update
About section Update

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,10 +53,10 @@
                     <h1 class="sub-title">About Me</h1>
                     <p>※ Hey there! Glad to see you here. Welcome to my world of innovation and creativity! <br><br>
 
-                        ※ Hi, My name is Tapash Sutradhar. I was born and brought up in Alipurduar, WB, India, and went to school at Mc. William, Alipurduar, a passionate tech enthusiast and learner. I hold a bachelor’s degree in engineering from BITM, WB, which has equipped me with a strong technical foundation and problem-solving skills. My deep fascination with technology, gadgets, and cars drives my curiosity and inspires me to innovate and contribute meaningfully to the field of engineering. <br><br>
-                        Beyond technology, I have a keen interest in politics, which keeps me engaged with global affairs and helps me understand the societal impact of innovation. I am a tech nerd and a political geek at heart, always eager to explore new ideas and their broader implications. <br><br>                        
-                        In my free time, I enjoy photography, reading, and traveling, which allow me to express my creativity and capture the world around me. I also love attending tech meetups, listening to industry leaders, and connecting with like-minded professionals. While I have explored programming and various tools, I am continuously refining my skills to align them with my career aspirations. <br><br>
-                        I thrive in collaborative environments where I can work with fellow tech enthusiasts and thought leaders to drive innovation and make a positive impact.  <br><br>
+                        ※ I’m Tapash Sutradhar, an Electrical Engineer — passionate about technology, AI, and cybersecurity. I hold a Bachelor's degree in Engineering  and I’m currently pursuing my MBA to bridge the gap between tech and business innovation. <br><br>
+                        With hands-on experience in industrial automation, electrical design, construction, and maintenance, I bring both technical depth and practical insight to every project. I’ve worked on various engineering projects and am always eager to learn, grow, and tackle new challenges. <br><br>
+                        Outside the circuit boards and code, I’m a curious mind — a tech nerd and political enthusiast who enjoys photography, travel, reading, and exploring new perspectives. I thrive in collaborative environments and love exchanging ideas with fellow innovators, engineers, and creators. <br><br>
+                        Let’s connect and build something meaningful together — whether it’s about smart tech, future cities, or just geeking out over cool gadgets.  <br><br>
                         <!----------------
                         ※ I have honed my skills in software development, testing, data analysis, and data science, 
                         diving deep into the techniques that drive modern technological solutions. With an ever-growing 
